# wordlebot

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Entropy.cpp  Entropy.h  Lookahead.cpp  Lookahead.h  LookaheadStrategy.cpp  LookaheadStrategy.h  ScoredWord.cpp  ScoredWord.h  Strategy.cpp  Strategy.h  WordQuery.cpp  WordQuery.h  WordTree.h  Wordle.cpp  Wordle.h  WordleBot.cpp  WordleBot.h  WordleMainCUDA.cpp  WordleSolverCUDA.cpp  WordleSolverCUDA.h  WordlebotCUDA.cpp  WordlebotCUDA.cu  WordlebotCUDA.h  build_vs2022.bat  main.cpp  nyt_words5.txt  wordleTests.cpp  words5  words5_long  words5_short
